# sing-box-docker

./: .autoenv.zsh  .env  .gitignore  .gitmodules  Dockerfile  README.md  auth_service.py  docker-compose.yml  main.py  pyproject.toml  release.py  requirements.txt
config/example/: shadowtls-client.json  shadowtls-server.json  vmess-client.json  vmess-server.json
docs/: README_LINUX.md
releases/: install.sh
scripts/: deploy_to_server.bash  install.sh  install_with_systemd.bash  install_with_systemd.sh  setup.bash  setup.sh  sing-box-hysteria2.service  sing-box-release.service  sing-box-trojan.service  start_proxy.bat
static/: styles.css
templates/: file_list.html  login.html
