[project]
name = "sing-box-manager"
version = "0.1.0"
description = "Deploy, package and distribute sing-box"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.8",
    "jinja2>=3.1.5",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.7",
]
